--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,25 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>Página Inicial</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
+  <ion-row>
+    <ion-col col-12 style="text-align: center">
+        <h2>Eba, já nos conhecemos!</h2>
+    </ion-col>
+  </ion-row>
+
+  <p style='text-align: center'>
+    <img style='border-radius: 50%; width: 136px; height: 122px;' [src]='imgBase64'>
+    <br><br>
+    Eu sei que você é <b>{{nome}}</b>.
+    <br>
+    Pelo que me lembro, você tem <b>{{idade}}</b> anos, e pra falar com você posso entrar
+    em contato pelo e-mail <b>{{email}}</b>.
+    <br>
+    <br>
+    <button ion-button color='danger' (click)="esquecer()">Me esquece!</button>
   </p>
 </ion-content>
